--- a/Castle Falkenstein/castle_falkenstein.html
+++ b/Castle Falkenstein/castle_falkenstein.html
@@ -12,6 +12,7 @@
                 </select>
             </label>
             <label>Health:</label><input type="number" name="attr_health" /><br/>
+            <label>Max Health:</label><input type="number" name="attr_max_health" value="5" /><br/>
             <label>Money (c):</label><input type="number" name="attr_money_c" /><br/>
             <label>Money (p):</label><input type="number" name="attr_money_p" /><br/>
         </div>
@@ -20,7 +21,7 @@
             <img src="https://upload.wikimedia.org/wikipedia/en/2/21/Castle_Falkenstein_Cover.jpg" />
         </div>
         <div class="col">
-            <h3>Languages</h3>
+            <h3>Languages Known</h3>
             <fieldset class="repeating_languages"> 
                 <input type="text" name="attr_language" /> 
             </fieldset>
